# get-review-done

./: .gitignore  CONTRIBUTING.md  README.md  RESEARCH-TEST-ITEMS.md  package.json  pyproject.toml
infra/: grd-conventions.json  grd-protocols.json  grd-state.json
src/grd/: __init__.py  contracts.py
src/grd/agents/: grd-bibliographer.md  grd-consistency-checker.md  grd-debugger.md  grd-executor.md  grd-paper-writer.md  grd-planner.md  grd-referee.md  grd-researcher.md  grd-statistician.md  grd-verifier.md
src/grd/commands/: branch-hypothesis.md  compare-branches.md  execute-phase.md  health.md  new-project.md  plan-phase.md  resume-work.md  review-paper.md  sync-state.md  verify-work.md
src/grd/core/: __init__.py  config.py  constants.py  conventions.py  git_ops.py  kernel.py  observability.py  phases.py  state.py
src/grd/hooks/: statusline.py
src/grd/mcp/: __init__.py  conventions_server.py  errors_server.py  patterns_server.py  protocols_server.py  state_server.py  verification_server.py
src/grd/specs/references/orchestration/: agent-delegation.md
src/grd/specs/references/protocols/: data-extraction-protocols.md  meta-analysis-protocols.md  narrative-synthesis-protocols.md  quality-assessment-protocols.md  screening-protocols.md  search-strategy-protocols.md
src/grd/specs/references/verification/: llm-review-errors.md
