[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "get-review-done"
version = "0.1.0"
description = "AI copilot for systematic literature reviews and meta-analyses"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jesse Weigel", email = "jesse@jesseweigel.com" },
]
keywords = ["systematic-review", "meta-analysis", "ai", "research", "prisma", "evidence-synthesis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/JesseRWeigel/get-review-done"
Repository = "https://github.com/JesseRWeigel/get-review-done"
Issues = "https://github.com/JesseRWeigel/get-review-done/issues"

[project.scripts]
grd = "grd.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/grd"]
